# kinnect

./: Cargo.toml  README.md  temp
migrations/: 20241117_create_all_tables.sql
src/: main.rs
src/lib/: mod.rs
src/lib/api/: mod.rs  node.rs  tree.rs  user.rs
src/lib/db/: mod.rs
src/lib/error/: clients.rs  mod.rs
src/lib/models/: mod.rs  raw.rs
