[package]
name = "kinnect"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.8"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.41.1", features = ["full"] }
