[package]
name = "kinnect"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.8"
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = [
    "time",
    "postgres",
    "runtime-tokio-rustls",
] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
